# opm-build

./: .gitignore  CMakeLists.txt  dune.module
cmake/Modules/: DuneCompat.cmake  LibtoolArchives.cmake  OpmDistClean.cmake  OpmDoc.cmake  OpmLibMain.cmake  OpmProject.cmake  UseVersion.cmake
cmake/Scripts/: configure
